<resources>
    <string name="app_name">Free Diamond App</string>
    <string name="noNetworkFound">You\'re not connected to the Internet. Please connect and retry. </string>
    <string name="dialog_yes">YES</string>
    <string name="dialog_no">NO</string>
    <string name="dialog_ok">OK</string>
    <string name="ad_attribution">Ad</string>
    <string name="msg_NO_INTERNET_RESPOND">Please connect your internet connection</string>
    <string name="msg_please_wait">Please wait …</string>
    <string name="msg_server_error">Something went wrong please try again</string>
    <string name="msg_press_back_twice">Double tab to back</string>
    <string name="hi">Hi</string>
    <string name="splash_namee">"Daily Free Diamonds \n- Fire Guide 2020 "</string>
    <string name="bonanzo">Bonanza Labs</string>
    <string name="getstart">Get Start</string>
    <string name="no_inter">No Internet Connection!</string>
    <string name="please_check">Please check your internet connection \nand try again.</string>
    <string name="refresh">Refresh</string>
    <string name="guide">Guide For Free Diamonds</string>
    <string name="letstart">lET’S START</string>
    <string name="withoutnet">Without Net</string>
    <string name="share">SHARE</string>
    <string name="share_with">Share With Friend</string>
    <string name="privacy">PRIVACY</string>
    <string name="sample_privacy">Sample Privacy</string>
    <string name="rating">RATING</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="app_name1">Dialy Fire Free Diamonds</string>
    <string name="for_free">FOR FREE FIRE</string>
    <string name="zero0">00</string>
    <string name="diamond_guide">DIAMOND GUIDE</string>
    <string name="tips">Get Free Diamoands For Free Tips</string>
    <string name="diamond_spinner">DIAMOND SPINNER</string>
    <string name="more_diamond">Get More Diamoands For Fire Free</string>
    <string name="basic_diamond">BASIC DIAMOND CALC</string>
    <string name="more_bdiamond">Get More Basic Diamoands For Calc</string>
    <string name="normal_iamond">NORMAL DIAMOND CALC</string>
    <string name="more_ndiamond">Get More Normal Diamoands For Calc</string>
    <string name="advanced_iamond">ADVANCED DIAMOND CALC</string>
    <string name="more_adiamond">Get More Advanced Diamoands For Calc</string>
    <string name="guide_d">Guide Diamond</string>
    <string name="tipsandtrick"><![CDATA[TIPS & TRICKS]]></string>
    <string name="weapon_guide">WEAPONS GUIDE</string>
    <string name="character_guide">CHARACTER GUIDE</string>
    <string name="vehicle_guide">VEHICLES GUIDE</string>
    <string name="getdevice">Get Device</string>
    <string name="exploremil">Explore Military Sites</string>
    <string name="payattention">Please Pay Attention To The....</string>
    <string name="lookatthe">Look At The Mini Map</string>
    <string name="takecover">Take Cover</string>
    <string name="usethevehicle">Use The Vehicle Carefully</string>
    <string name="AN94">AN94</string>
    <string name="an94topic">AN94,AR With High Firepower\n Power. Long Effective Range,\n Decent Rate Of Fire.</string>
    <string name="M4A1">M4A1</string>
    <string name="m4a1topic">A Well-Balanced Rifle,\n Suitable For\n all Combat Situations.</string>
    <string name="M14">M14</string>
    <string name="M14topic">The Rifle With The Longest\n Range, Almost Like\n a Sniper Rifle.</string>
    <string name="AK47">AK47</string>
    <string name="ak47topic">High Damage, Skill\n Required Control.</string>
    <string name="GROZA">GROZA</string>
    <string name="grozatopic">High Domage And Long \nRange Rifle Great Stability.\n Probably The Strongest Rifle \nHave Seen Free Fire.</string>
    <string name="SCARL">SCARL</string>
    <string name="scarltopic">Stable And Balanced Rifile\n Is Great For Beginners.</string>
    <string name="FAMAS">FAMAS</string>
    <string name="famastopic">FAMAS Fires 3 Bullets At A\n Time, Very Medium And\n Long-Term Transactions</string>
    <string name="HAYATO">HAYATO</string>
    <string name="hayatotopic">This Young Samurai Has \nA Secret Nobody Knows...</string>
    <string name="MOCO">MOCO</string>
    <string name="mocotopic">A Legend In The Moco Network \nWorld. Moco Known As “Black \nChat” Because Of Its Technique\n And Intelligence.</string>
    <string name="WUKONG">WUKONG</string>
    <string name="wukongtopic">A Monkey That Looks Like A\n Human He Still Likes Bananas,\n Thinking....</string>
    <string name="ANTONIO">ANTONIO</string>
    <string name="antoniotopic">Antonio, The Famous Angus.\n He Is A Rrown Up Orphan Only.</string>
    <string name="ANDREW">ANDREW</string>
    <string name="andrewtopic">Andrew Was A Policeman. With\n His A Strong Sense Of Justice,\n He Spent Most Of His Time \nThe Time Te Chased...</string>
    <string name="KELLY">KELLY</string>
    <string name="kellytopic">Kelly Is A High School Sprinter.\n She Too It Is Called Shimada Kiriko.\n She Likes Run And Then...</string>
    <string name="OLIVIA">OLIVIA</string>
    <string name="oliviatopic">Olivia Is A Nurse. Nursing\n And Care For The \n People Around..</string>
    <string name="FORD">FORD</string>
    <string name="fordtopic">Ford Is A Freely Playabl\n Role, Former Sailor. He Spent\n 2000 Cash..</string>
    <string name="NIKITA">NIKITA</string>
    <string name="nikitatopic">Nikita Is The School’s Air Rifle\n Shooter, This Helps To Hone\n Her Agility, Keen Senses</string>
    <string name="MISHA">MISHA</string>
    <string name="mishatopic">Misha Is A Very Talented \nRacer, She Was Never\n Give Up.</string>
    <string name="MAXIM">MAXIM</string>
    <string name="maximtopic">Maxim Is a Character In Garena\n Free Fire. He Can Be Purchased\n With 8000 Gold Coins Or\n 499 Diamonds</string>
    <string name="KLA">KLA</string>
    <string name="klatopic">Kla Is A Respected Martial\n Artist Good At Muay Thai....</string>
    <string name="PALOMA">PALOMA</string>
    <string name="palomatopic">Paloma’s Painful Experience\n Not Often Talked About...</string>
    <string name="MIGUEL">MIGUEL</string>
    <string name="migueltopic">Miguel Is An All-Round Elite\n Fighter. Special Forces.\n As The Head Of The Team...</string>
    <string name="CAROLINE">CAROLINE</string>
    <string name="carolinetopic">Caroline, A Girl Who Grew Up In\n  An ExtremelyExtreme Enviroment\n A Wealthy Family, She Is Always \nSurrounded By Bt Wherever She Goes,\n There Are Bodyguards....</string>
    <string name="sportscar">SPORTS CAR</string>
    <string name="sportscartopic">Because They Will Appear \n On Their Minimap As a\n Noise Source..</string>
    <string name="monstercar">MONSTER CAR</string>
    <string name="monstercartopic">The Monster Car Is The \nBiggest The Most Difficult\n Vehicle Must Be Used \nGunshots And Grenades.</string>
    <string name="moto">MOTO</string>
    <string name="mototopic">A Few Cars Caught Fire\n The Bottlefield Will...</string>
    <string name="amphibian">AMPHIBIAN</string>
    <string name="amphibiantopic">A Few Cars Caught Fire The\n Battlefield Will Help Players\n Travel Faster Through</string>
    <string name="jeep">MILITARY JEEP</string>
    <string name="jeeptopic">Because They Will Appear\n On Their Minimap As\n A Noise Source...</string>
    <string name="tuktuk">TUK TUK</string>
    <string name="tuktuktopic">Driving A Vehicle Will Also\n Enable You Easy To Be\n Discovered More...</string>
    <string name="van">VAN</string>
    <string name="vantopic">Driving A Vehicle Will Also\n Enable You Easily  Deleted \nBy The Enemy...</string>
    <string name="detail_dia">"     In Free Fire, You Not Only Want To Win, But Also Want To Show Off The Unque Appearance And Function Of The  Weapon. For This, You Need To Accumulate Gold And Diamonds By Playing Or Playing With Real Money. Due To The  Large Number Of Options, Events, And Menus, Many Of Us May Be Confused."</string>
    <string name="openfreebox"><![CDATA[Open Free Boxes & Participate]]></string>
    <string name="entergame">Enter The Game Evrty Day</string>
    <string name="playgames">Play Games</string>
    <string name="spin">SPIN</string>
    <string name="noofdays">Enter Number Of Days...</string>
    <string name="count_now">Count Now</string>
    <string name="TOPIC">TOPIC</string>
    <string name="detail">Choose The Correct Landing Pointt Hoose The Correct Landing Pointtchoo  The Correct Landing Pointt Choose The Correct Landing Pointttchoos The Correct Landing Point Choose The Correct Landing Pointtt Hoose The Correct Landing Choose The Correct Landing Pointt\n\nE Correct Landing Pointt Hoose The Correct Landing Pointtchoo  The Correct Landing Pointtchoose The Correct Landing Pointtchoos The Correct Landing Pointtchoose The Correct Landing Pointt Hoose The Correct Landing Choose The Correct Landing Pointtchoosethe Correct Landing Pointtchoos The Correct Landing Pointtchoose The Correct Landing Pointt Hoose The Correct Landing Choose The Correct Landing</string>
    <string name="shortdetail">Choose The Correct Landing Pointt Hoose The Correct Landing Pointtchoo  The Correct Landing Pointt Choose The Correct Landing Pointttchoos The Correct Landing Point Choose The Correct Landing Pointtt Hoose The Correct Landing Choose The Correct Landing Pointt\n\nChoose The Correct Landing Pointt Hoose The Correct Landing Pointtchoo  The Correct Landing Pointt Choose The Correct Landing Pointttchoos</string>
</resources>